--- a/docs/api/qiskit-addon-aqc-tensor/0.1/ansatz-generation-kak.mdx
+++ b/docs/api/qiskit-addon-aqc-tensor/0.1/ansatz-generation-kak.mdx
@@ -1,36 +1,44 @@
 ---
-title: TwoQubitAnsatzBlock (latest version)
-description: API reference for qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock in the latest version of qiskit-addon-aqc-tensor
+title: KAK (v0.1)
+description: API reference for qiskit_addon_aqc_tensor.ansatz_generation.KAK in qiskit-addon-aqc-tensor v0.1
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
+python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.KAK
 ---
 
-# TwoQubitAnsatzBlock
+# KAK
 
-<Class id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.2/qiskit_addon_aqc_tensor/ansatz_generation/from_connectivity.py#L61-L64" signature="TwoQubitAnsatzBlock(params)" modifiers="class">
-  Bases: [`AnsatzBlock`](ansatz-generation-ansatz-block "qiskit_addon_aqc_tensor.ansatz_generation.from_connectivity.AnsatzBlock")
+<Class id="qiskit_addon_aqc_tensor.ansatz_generation.KAK" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.1/qiskit_addon_aqc_tensor/ansatz_generation.py#L81-L99" signature="KAK(params)" modifiers="class">
+  Bases: [`TwoQubitAnsatzBlock`](ansatz-generation-two-qubit-ansatz-block "qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock")
 
-  Two-qubit ansatz block.
+  Two-qubit ansatz block based on the KAK decomposition.
 
   Initialize the ansatz block.
 
   **Parameters**
 
-  **params** ([`Sequence`](https://docs.python.org/3/library/typing.html#typing.Sequence "(in Python v3.13)")\[[`Parameter`](/api/qiskit/qiskit.circuit.Parameter "(in Qiskit v1.4)")]) – Sequence of parameters.
+  **params** ([`Sequence`](https://docs.python.org/3/library/typing.html#typing.Sequence "(in Python v3.13)")\[[`Parameter`](/api/qiskit/qiskit.circuit.Parameter "(in Qiskit v1.2)")]) – Sequence of parameters.
 
   ## Attributes
 
+  ### ansatz\_name
+
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.ansatz_name" attributeValue="'KAK'" />
+
+  ### ansatz\_num\_params
+
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.ansatz_num_params" attributeValue="3" />
+
   ### ansatz\_num\_qubits
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.ansatz_num_qubits" attributeValue="2" />
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.ansatz_num_qubits" attributeValue="2" />
 
   ### base\_class
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.base_class">
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.base_class">
     Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.
 
-    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioral perspective. In particular, you should *not* override [`base_class`](#qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.base_class "qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrized gate with a particular set of parameters for the purposes of distinguishing it in a `Target` from the full parametrized gate.
+    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioral perspective. In particular, you should *not* override [`base_class`](#qiskit_addon_aqc_tensor.ansatz_generation.KAK.base_class "qiskit_addon_aqc_tensor.ansatz_generation.KAK.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrized gate with a particular set of parameters for the purposes of distinguishing it in a `Target` from the full parametrized gate.
 
     This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:
 
@@ -48,55 +56,43 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   ### condition
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.condition">
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.condition">
     The classical condition on the instruction.
-
-    <Admonition title="Deprecated since version 1.3.0" type="danger">
-      The property `qiskit.circuit.instruction.Instruction.condition` is deprecated as of qiskit 1.3.0. It will be removed in 2.0.0.
-    </Admonition>
   </Attribute>
 
   ### condition\_bits
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.condition_bits">
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.condition_bits">
     Get Clbits in condition.
-
-    <Admonition title="Deprecated since version 1.3.0" type="danger">
-      The property `qiskit.circuit.instruction.Instruction.condition_bits` is deprecated as of qiskit 1.3.0. It will be removed in 2.0.0.
-    </Admonition>
   </Attribute>
 
   ### decompositions
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.decompositions">
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.decompositions">
     Get the decompositions of the instruction from the SessionEquivalenceLibrary.
   </Attribute>
 
   ### definition
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.definition">
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.definition">
     Return definition in terms of other basic gates.
   </Attribute>
 
   ### duration
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.duration">
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.duration">
     Get the duration.
-
-    <Admonition title="Deprecated since version 1.3.0" type="danger">
-      The property `qiskit.circuit.instruction.Instruction.duration` is deprecated as of qiskit 1.3.0. It will be removed in Qiskit 2.0.0.
-    </Admonition>
   </Attribute>
 
   ### label
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.label">
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.label">
     Return instruction label
   </Attribute>
 
   ### mutable
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.mutable">
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.mutable">
     Is this instance is a mutable unique instance or not.
 
     If this attribute is `False` the gate instance is a shared singleton and is not mutable.
@@ -104,49 +100,45 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   ### name
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.name">
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.name">
     Return the name.
   </Attribute>
 
   ### num\_clbits
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.num_clbits">
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.num_clbits">
     Return the number of clbits.
   </Attribute>
 
   ### num\_qubits
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.num_qubits">
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.num_qubits">
     Return the number of qubits.
   </Attribute>
 
   ### params
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.params">
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.params">
     The parameters of this `Instruction`. Ideally these will be gate angles.
   </Attribute>
 
   ### unit
 
-  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.unit">
+  <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.unit">
     Get the time unit of duration.
-
-    <Admonition title="Deprecated since version 1.3.0" type="danger">
-      The property `qiskit.circuit.instruction.Instruction.unit` is deprecated as of qiskit 1.3.0. It will be removed in Qiskit 2.0.0.
-    </Admonition>
   </Attribute>
 
   ## Methods
 
   ### add\_decomposition
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.add_decomposition" signature="add_decomposition(decomposition)">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.add_decomposition" signature="add_decomposition(decomposition)">
     Add a decomposition of the instruction to the SessionEquivalenceLibrary.
   </Function>
 
   ### assemble
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.assemble" signature="assemble()">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.assemble" signature="assemble()">
     Assemble a QasmQobjInstruction
 
     <Admonition title="Deprecated since version 1.2" type="danger">
@@ -156,7 +148,7 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   ### broadcast\_arguments
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
     Validation and handling of the arguments and its relationship.
 
     For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:
@@ -209,21 +201,17 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   ### c\_if
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.c_if" signature="c_if(classical, val)">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.c_if" signature="c_if(classical, val)">
     Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.
 
     <Admonition title="Note" type="note">
       This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
     </Admonition>
-
-    <Admonition title="Deprecated since version 1.3.0" type="danger">
-      The method `qiskit.circuit.instruction.Instruction.c_if()` is deprecated as of qiskit 1.3.0. It will be removed in 2.0.0.
-    </Admonition>
   </Function>
 
   ### control
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.control" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None, annotated=None)">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.control" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None, annotated=None)">
     Return the controlled version of itself.
 
     Implemented either as a controlled gate (ref. `ControlledGate`) or as an annotated operation (ref. `AnnotatedOperation`).
@@ -246,7 +234,7 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   ### copy
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.copy" signature="copy(name=None)">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.copy" signature="copy(name=None)">
     Copy of the instruction.
 
     **Parameters**
@@ -259,12 +247,12 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.2)")
   </Function>
 
   ### inverse
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.inverse" signature="inverse(annotated=False)">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.inverse" signature="inverse(annotated=False)">
     Invert this instruction.
 
     If annotated is False, the inverse instruction is implemented as a fresh instruction with the recursively inverted definition.
@@ -288,13 +276,13 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   ### is\_parameterized
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.is_parameterized" signature="is_parameterized()">
-    Return whether the `Instruction` contains [compile-time parameters](/api/qiskit/circuit#circuit-compile-time-parameters "(in Qiskit v1.4)").
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.is_parameterized" signature="is_parameterized()">
+    Return whether the `Instruction` contains [compile-time parameters](/api/qiskit/circuit#circuit-compile-time-parameters "(in Qiskit v1.2)").
   </Function>
 
   ### power
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.power" signature="power(exponent, annotated=False)">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.power" signature="power(exponent, annotated=False)">
     Raise this gate to the power of `exponent`.
 
     Implemented either as a unitary gate (ref. `UnitaryGate`) or as an annotated operation (ref. `AnnotatedOperation`). In the case of several standard gates, such as `RXGate`, when the power of a gate can be expressed in terms of another standard gate that is returned directly.
@@ -315,7 +303,7 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   ### repeat
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.repeat" signature="repeat(n)">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.repeat" signature="repeat(n)">
     Creates an instruction with `self` repeated :math\`n\` times.
 
     If this operation has a conditional, the output instruction will have the same conditional and the inner repeated operations will be unconditional; instructions within a compound definition cannot be conditioned on registers within Qiskit’s data model. This means that it is not valid to apply a repeated instruction to a clbit that it both writes to and reads from in its condition.
@@ -330,7 +318,7 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.2)")
 
     **Raises**
 
@@ -339,7 +327,7 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   ### reverse\_ops
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.reverse_ops" signature="reverse_ops()">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.reverse_ops" signature="reverse_ops()">
     For a composite instruction, reverse the order of sub-instructions.
 
     This is done by recursively reversing all sub-instructions. It does not invert any gate.
@@ -352,12 +340,12 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.2)")
   </Function>
 
   ### soft\_compare
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.soft_compare" signature="soft_compare(other)">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.soft_compare" signature="soft_compare(other)">
     Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.
 
     **Parameters**
@@ -375,7 +363,7 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   ### to\_matrix
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.to_matrix" signature="to_matrix()">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.to_matrix" signature="to_matrix()">
     Return a Numpy.array for the gate unitary matrix.
 
     **Returns**
@@ -393,7 +381,7 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   ### to\_mutable
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.to_mutable" signature="to_mutable()">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.to_mutable" signature="to_mutable()">
     Return a mutable copy of this gate.
 
     This method will return a new mutable copy of this gate instance. If a singleton instance is being used this will be a new unique instance that can be mutated. If the instance is already mutable it will be a deepcopy of that instance.
@@ -401,7 +389,7 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   ### validate\_parameter
 
-  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.validate_parameter" signature="validate_parameter(parameter)">
+  <Function id="qiskit_addon_aqc_tensor.ansatz_generation.KAK.validate_parameter" signature="validate_parameter(parameter)">
     Gate parameters should be int, float, or ParameterExpression
   </Function>
 </Class>
