--- a/docs/api/qiskit-addon-aqc-tensor/0.1/ansatz-generation-two-qubit-ansatz-block.mdx
+++ b/docs/api/qiskit-addon-aqc-tensor/0.1/ansatz-generation-two-qubit-ansatz-block.mdx
@@ -1,6 +1,6 @@
 ---
-title: TwoQubitAnsatzBlock (latest version)
-description: API reference for qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock in the latest version of qiskit-addon-aqc-tensor
+title: TwoQubitAnsatzBlock (v0.1)
+description: API reference for qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock in qiskit-addon-aqc-tensor v0.1
 in_page_toc_min_heading_level: 1
 python_api_type: class
 python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
@@ -8,8 +8,8 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
 # TwoQubitAnsatzBlock
 
-<Class id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.2/qiskit_addon_aqc_tensor/ansatz_generation/from_connectivity.py#L61-L64" signature="TwoQubitAnsatzBlock(params)" modifiers="class">
-  Bases: [`AnsatzBlock`](ansatz-generation-ansatz-block "qiskit_addon_aqc_tensor.ansatz_generation.from_connectivity.AnsatzBlock")
+<Class id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.1/qiskit_addon_aqc_tensor/ansatz_generation.py#L61-L64" signature="TwoQubitAnsatzBlock(params)" modifiers="class">
+  Bases: [`AnsatzBlock`](ansatz-generation-ansatz-block "qiskit_addon_aqc_tensor.ansatz_generation.AnsatzBlock")
 
   Two-qubit ansatz block.
 
@@ -17,7 +17,7 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   **Parameters**
 
-  **params** ([`Sequence`](https://docs.python.org/3/library/typing.html#typing.Sequence "(in Python v3.13)")\[[`Parameter`](/api/qiskit/qiskit.circuit.Parameter "(in Qiskit v1.4)")]) – Sequence of parameters.
+  **params** ([`Sequence`](https://docs.python.org/3/library/typing.html#typing.Sequence "(in Python v3.13)")\[[`Parameter`](/api/qiskit/qiskit.circuit.Parameter "(in Qiskit v1.2)")]) – Sequence of parameters.
 
   ## Attributes
 
@@ -50,20 +50,12 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.condition">
     The classical condition on the instruction.
-
-    <Admonition title="Deprecated since version 1.3.0" type="danger">
-      The property `qiskit.circuit.instruction.Instruction.condition` is deprecated as of qiskit 1.3.0. It will be removed in 2.0.0.
-    </Admonition>
   </Attribute>
 
   ### condition\_bits
 
   <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.condition_bits">
     Get Clbits in condition.
-
-    <Admonition title="Deprecated since version 1.3.0" type="danger">
-      The property `qiskit.circuit.instruction.Instruction.condition_bits` is deprecated as of qiskit 1.3.0. It will be removed in 2.0.0.
-    </Admonition>
   </Attribute>
 
   ### decompositions
@@ -82,10 +74,6 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.duration">
     Get the duration.
-
-    <Admonition title="Deprecated since version 1.3.0" type="danger">
-      The property `qiskit.circuit.instruction.Instruction.duration` is deprecated as of qiskit 1.3.0. It will be removed in Qiskit 2.0.0.
-    </Admonition>
   </Attribute>
 
   ### label
@@ -130,10 +118,6 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
   <Attribute id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.unit">
     Get the time unit of duration.
-
-    <Admonition title="Deprecated since version 1.3.0" type="danger">
-      The property `qiskit.circuit.instruction.Instruction.unit` is deprecated as of qiskit 1.3.0. It will be removed in Qiskit 2.0.0.
-    </Admonition>
   </Attribute>
 
   ## Methods
@@ -215,10 +199,6 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
     <Admonition title="Note" type="note">
       This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
     </Admonition>
-
-    <Admonition title="Deprecated since version 1.3.0" type="danger">
-      The method `qiskit.circuit.instruction.Instruction.c_if()` is deprecated as of qiskit 1.3.0. It will be removed in 2.0.0.
-    </Admonition>
   </Function>
 
   ### control
@@ -259,7 +239,7 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.2)")
   </Function>
 
   ### inverse
@@ -289,7 +269,7 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
   ### is\_parameterized
 
   <Function id="qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock.is_parameterized" signature="is_parameterized()">
-    Return whether the `Instruction` contains [compile-time parameters](/api/qiskit/circuit#circuit-compile-time-parameters "(in Qiskit v1.4)").
+    Return whether the `Instruction` contains [compile-time parameters](/api/qiskit/circuit#circuit-compile-time-parameters "(in Qiskit v1.2)").
   </Function>
 
   ### power
@@ -330,7 +310,7 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.2)")
 
     **Raises**
 
@@ -352,7 +332,7 @@ python_api_name: qiskit_addon_aqc_tensor.ansatz_generation.TwoQubitAnsatzBlock
 
     **Return type**
 
-    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.4)")
+    [qiskit.circuit.Instruction](/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v1.2)")
   </Function>
 
   ### soft\_compare
