--- a/docs/api/qiskit-addon-aqc-tensor/0.1/simulation-quimb-qiskit-quimb-conversion-context.mdx
+++ b/docs/api/qiskit-addon-aqc-tensor/0.1/simulation-quimb-qiskit-quimb-conversion-context.mdx
@@ -1,6 +1,6 @@
 ---
-title: QiskitQuimbConversionContext (latest version)
-description: API reference for qiskit_addon_aqc_tensor.simulation.quimb.QiskitQuimbConversionContext in the latest version of qiskit-addon-aqc-tensor
+title: QiskitQuimbConversionContext (v0.1)
+description: API reference for qiskit_addon_aqc_tensor.simulation.quimb.QiskitQuimbConversionContext in qiskit-addon-aqc-tensor v0.1
 in_page_toc_min_heading_level: 1
 python_api_type: class
 python_api_name: qiskit_addon_aqc_tensor.simulation.quimb.QiskitQuimbConversionContext
@@ -8,7 +8,7 @@ python_api_name: qiskit_addon_aqc_tensor.simulation.quimb.QiskitQuimbConversionC
 
 # QiskitQuimbConversionContext
 
-<Class id="qiskit_addon_aqc_tensor.simulation.quimb.QiskitQuimbConversionContext" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.2/qiskit_addon_aqc_tensor/simulation/quimb/__init__.py#L204-L209" signature="QiskitQuimbConversionContext(mapping, /)" modifiers="class">
+<Class id="qiskit_addon_aqc_tensor.simulation.quimb.QiskitQuimbConversionContext" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-aqc-tensor/tree/stable/0.1/qiskit_addon_aqc_tensor/simulation/quimb/__init__.py#L180-L185" signature="QiskitQuimbConversionContext(mapping, /)" modifiers="class">
   Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")
 
   Contains information about Qiskit-to-Quimb conversion, necessary to recover Qiskit parameters.
