--- a/docs/guides/cloud-account-structure.mdx
+++ b/docs/guides/cloud-account-structure.mdx
@@ -9,7 +9,7 @@ platform: cloud
 
 Before setting up IBM Quantum Platform, it is important to understand the IBM Cloud&reg; [Identity and Access Management (IAM) account](https://cloud.ibm.com/docs/account?topic=account-overview) structure.  As shown in the following high-level diagram, there is an **account** at the highest level.  There is only one account owner, who has exclusive control over billing management.
 
-This account contains multiple **users** and **service instances** (such as IBM Qiskit Runtime).  Each service instance exists in a specific **region** and has one **plan**, so if you want to have multiple plans available to your users, you will have multiple service instances, each associated with a different plan.
+This account contains multiple **users** and **service instances** (such as IBM Quantum).  Each service instance exists in a specific **region** and has one **plan**, so if you want to have multiple plans available to your users, you will have multiple service instances, each associated with a different plan.
 
 Each user is assigned **access policies**, which grant them various levels of access to service instances.  Access policies can be grouped together as an **access group**.
 
