--- a/docs/guides/cloud-account-structure.mdx
+++ b/docs/guides/cloud-account-structure.mdx
@@ -9,6 +9,9 @@ platform: cloud
 
 Before setting up Qiskit Runtime, it is important to understand the IBM Cloud&reg; [Identity and Access Management (IAM) account](https://cloud.ibm.com/docs/account?topic=account-overview) structure.  As shown in the following high-level diagram, there is an **account** at the highest level.  There is only one account owner, who has exclusive control over billing management.
 
+![A high level diagram is shown, illustrating the relationships between the account, users, instances, and access policies.](/images/guides/cloud-account-structure/account-structure.svg 'Cloud account structure')
+
+
 This account contains multiple **users** and **service instances** (such as IBM Qiskit Runtime).  Each service instance exists in a specific **region** and has one **plan**, so if you want to have multiple plans available to your users, you will have multiple service instances, each associated with a different plan.
 
 Each user is assigned **access policies**, which grant them various levels of access to service instances.  Access policies can be grouped together as an **access group**.
@@ -24,6 +27,8 @@ Within an access policy, you can specify permissions by selecting _platform_ and
 <Admonition type="Note">
 This guide describes a simplified representation of the IAM model. For full details, refer to the [IBM Cloud IAM documentation.](https://cloud.ibm.com/docs/account?topic=account-iamoverview)
 </Admonition>
+
+![This diagram illustrates the relationships between access groups, access policies, and user permissions.](/images/guides/cloud-account-structure/policies.svg 'Access policies and groups')
 
 ## Roles
 
