--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -16,16 +16,6 @@ You can run workloads on IBM&reg; quantum processing units (QPUs) by setting up 
 The [updated version of IBM Quantum Platform](https://quantum.cloud.ibm.com/) is in **early access** mode.  Therefore, you can log on, create instances, run jobs, and so on, but some functions are not available yet.  If you need to use functions that are not yet available, use [IBM Quantum Platform Classic](https://quantum.ibm.com/) or [Qiskit Runtime on IBM Cloud](https://cloud.ibm.com/quantum) instead.
 </Admonition>
 
-<span id="cloud-plans"></span>
-Available IBM Cloud plans:
-
-- **Premium Plan** - Run quantum circuits on the world's best QPUs using an enterprise quantum time subscription.
-- **Standard (Pay-as-you-go) Plan** - Run quantum circuits on the world's best QPUs and pay only for the quantum time you use.
-- **Open Plan**: Run your quantum circuits on the world's best QPUs for free (up to 10 minutes quantum time per month).
-   <Admonition type="note">
-   During early access, users on the Open Plan get 10 minutes per 28-day period.
-   </Admonition>
-
 <span id="cloud"></span>
 ## Set up to use IBM Cloud
 
@@ -215,8 +205,8 @@ curl -X 'GET' \
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
+  -  [Overview of available plans.](plans-overview)
   -  [Configure the Qiskit SDK locally.](configure-qiskit-local)
   -  Follow the steps in [Hello world](hello-world) to write and run a quantum program.
-  -  [Get started with IBM Quantum on Cloud.](https://cloud.ibm.com/docs/quantum-computing?topic=quantum-computing-get-started)
   -  Try a [tutorial](https://learning.quantum.ibm.com/catalog/tutorials) in IBM Quantum Learning.
 </Admonition>
